objects/CN_Quote_To_Promotion__c.object
<CustomObject>
    <fields>
        <fullName>CN_Is_Promotion_Published__c</fullName>
        <formula>CN_Promotion_Member__r.CN_IsPublished__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Promotion Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Quote_Approved__c</fullName>
        <formula>ISPICKVAL( CN_Quote__r.Status , &quot;Approved&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Quote Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_End_Date__c</fullName>
        <formula>CN_Promotion_Member__r.CN_Promotion_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Promotion Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CN_Promotion_Member__c.CN_IsPublished__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CN_Promotion_Member__c</referenceTo>
        <relationshipLabel>Quote To Promotions</relationshipLabel>
        <relationshipName>Quote_To_Promotions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Name__c</fullName>
        <formula>CN_Promotion_Member__r.CN_Promotion__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Start_Date__c</fullName>
        <formula>CN_Promotion_Member__r.CN_Promotion__r.CN_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Promotion_Status__c</fullName>
        <formula>TEXT( CN_Promotion_Member__r.CN_Promotion__r.CN_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Status__c</fullName>
        <formula>TEXT(CN_Quote__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote_Sync_Status__c</fullName>
        <formula>TEXT( CN_Quote__r.CN_Sync_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote To Promotions</relationshipLabel>
        <relationshipName>Quote_To_Promotions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quote To Promotion</label>
    <nameField>
        <displayFormat>QTP-{000000}</displayFormat>
        <label>Quote To Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote To Promotions</pluralLabel>
    <recordTypes>
        <fullName>CN_Quote_To_Promotion</fullName>
        <active>true</active>
        <label>CN_Quote_To_Promotion</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_QTP_ChecK_Related_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
 CN_Quote__r.Opportunity.Account.Id !=  CN_Promotion_Member__r.CN_Account__r.Id 
)</errorConditionFormula>
        <errorDisplayField>CN_Promotion_Member__c</errorDisplayField>
        <errorMessage>The Promotion selected should be same as Quote&apos;s Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QTP_Check_Promotion_Duration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
ISNEW(),
NOT( CN_Promotion_Member__r.CN_Promotion_Start_Date__c &lt;= CN_Quote__r.CN_Effective_Date__c &amp;&amp;  CN_Quote__r.ExpirationDate  &lt;=  CN_Promotion_Member__r.CN_Promotion_End_Date__c )
)</errorConditionFormula>
        <errorDisplayField>CN_Promotion_Member__c</errorDisplayField>
        <errorMessage>The Promotion is not in activate duration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_QTP_Prevent_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISCHANGED(CN_Promotion_Member__c)
)</errorConditionFormula>
        <errorMessage>You are not allow to edit the quote to promotion.</errorMessage>
    </validationRules>
</CustomObject>